# llamachat

./: .gitignore  CODE_OF_CONDUCT.md  CONTRACT.md  Cargo.toml  HANDOFF.md  PRIVACY.md  README.md  RECON.md  SPEC.md
.github/workflows/: build.yml
catalog/: models.json
ci/: build.yml
crates/fitllm-cli/: Cargo.toml
crates/fitllm-cli/src/: main.rs
crates/fitllm-cli/src/tui/: llama.rs  mod.rs  render.rs  theme.rs
crates/fitllm-core/: Cargo.toml
crates/fitllm-core/src/: agent.rs  catalog.rs  lib.rs  recommend.rs  store.rs  types.rs
crates/fitllm-core/src/hardware/: apple.rs  gpu.rs  memory.rs  mod.rs  os.rs  storage.rs  util.rs
crates/fitllm-core/src/tools/: computer.rs  desktop.rs  filesystem.rs  mod.rs  process.rs  shell.rs
crates/llamachat-cli/: Cargo.toml
crates/llamachat-cli/src/: main.rs
crates/llamachat-cli/src/tui/: action.rs  brand.rs  chat.rs  llama.rs  mod.rs  render.rs  tools.rs
crates/llamachat-core/: Cargo.toml
crates/llamachat-core/src/: catalog.rs  lib.rs  store.rs  types.rs
crates/llamachat-core/src/hardware/: cpu.rs  storage.rs
crates/llamachat-core/src/tools/: computer.rs  desktop.rs  mod.rs
docs/: CODE_SIGNING_POLICY.md  PLATFORMS.md  SIGNING.md
docs/design/: benchmark-levels.md
llamachat-brand/: Logo.tsx  README.md  _preview.html
llamachat-brand/icons/: icon.icns
llamachat-brand/icons/android/values/: ic_launcher_background.xml
scripts/: build-sidecar.ps1  build-sidecar.sh  fitllm-sidecar.spec  fitllm_sidecar_entry.py  llamachat-sidecar.spec  llamachat_sidecar_entry.py  requirements-sidecar.txt
sidecar/: README.md  pyproject.toml
sidecar/src/fitllm_sidecar/: __init__.py  __main__.py  benchmark.py  server.py  sysmon.py
sidecar/src/fitllm_sidecar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sidecar/src/fitllm_sidecar/adapters/: __init__.py  base.py  ollama.py
sidecar/src/llamachat_sidecar/: __init__.py  __main__.py  server.py
sidecar/src/llamachat_sidecar/adapters/: __init__.py  base.py  ollama.py
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  commands.rs  desktop.rs  main.rs  memory.rs  ollama.rs  settings.rs  sidecar.rs  state.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  commands.ts  index.css  models.ts  skills.ts  tauri.ts  types.ts
ui/src/components/: AgentSetup.tsx  ChatArea.tsx  CommandMenu.tsx  HardwarePanel.tsx  InputBar.tsx  Logo.tsx  MemorySeed.tsx  MemoryTab.tsx  MessageBubble.tsx  ModelLibrary.tsx  ModelPicker.tsx  OnboardingWizard.tsx  RecommendationsList.tsx  Settings.tsx  SetupWizard.tsx  Sidebar.tsx  SkillsTab.tsx  TierBadge.tsx  WelcomeSteps.tsx
