[workspace]
resolver = "2"
members = [
    "crates/llamachat-core",
    "crates/llamachat-cli",
    "src-tauri",  # needs webkit2gtk to build; `cargo build -p llamachat-cli` for core-only
]
# `cargo build` on hosts without webkit2gtk builds only the pure-Rust core + CLI.
# The Tauri shell (src-tauri) is built explicitly with `cargo build -p llamachat`.
default-members = [
    "crates/llamachat-core",
    "crates/llamachat-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["LlamaChat contributors"]
repository = "https://github.com/vafc21/llamachat"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.33"
