[package]
name = "llamachat"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LlamaChat desktop shell (Tauri): profiles your machine and rates which LLMs it can run."
default-run = "llamachat"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
llamachat-core = { path = "../crates/llamachat-core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
dirs = "5"
# Real mouse/keyboard control for Agent mode (native CGEvent on macOS).
enigo = "0.6"
# Screenshot → vision-model describe (opt-in perception).
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
# Check/prompt for macOS Accessibility permission (agent setup page).
macos-accessibility-client = "0.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
# Native accessibility read (read_screen) via the Windows UI Automation tree,
# so the agent can perceive an app's controls as text (role: label @ x,y) with
# no permission prompt — mirrors the macOS AX reader. Vision is the fallback.
uiautomation = "0.25"

[features]
# this feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
