[package]
name = "llamachat-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LlamaChat CLI: exercise the core engine (hardware profile, catalog, recommendations) without the desktop shell."

[[bin]]
name = "llamachat"
path = "src/main.rs"

[dependencies]
llamachat-core = { path = "../llamachat-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
ratatui = "0.30.2"
crossterm = "0.29.0"
